Update: Telas Perfil Cliente e Editar Perfil Cliente. Arrumei os layouts das telas.

--- a/CharmeX_v03/app/src/main/res/values/strings.xml
+++ b/CharmeX_v03/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
     <!-- Strings da Tela Principal -->
 
     <string name="btnAgendamentos">Agendamentos</string>
+    <string name="title_activity_sla">sla</string>
 
 </resources>
